--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,17 @@ __pycache__/
 build/
 
 # End of https://www.gitignore.io/api/web,webstorm,visualstudiocode,visualstudio,node,typings
+
+
+# Output of Typescript compiler
+source/**/*.js
+source/**/*.js.map
+tests/**/*.js
+tests/**/*.js.map
+
+
+# Local environment files
+.env
+
+# Cache and build artifacts
+.tmp
