--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,8 +10,7 @@
         {
             "taskName": "Cluster Bomb",
             "args": ["run", "cluster-bomb"],
-            "isBuildCommand": true,
-            "isWatching": true
+            "isBuildCommand": true
         }
     ]
 }
