Work on steam implementation

--- a/.env.template
+++ b/.env.template
@@ -16,6 +16,10 @@
 # This will default to 0 if it is not set.
 PORT=5000
 
+# The web accessable URL which the server process can be accessed through.
+# This is used throughout the application to set redirects, email addresses and other such information.
+ACTIVE_RUNTIME_URL=http://localhost:5000
+
 ######################
 # CLIENT APPLICATION #
 ######################
