--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@t2ee/vader": "^0.1.2",
     "@types/koa": "^2.0.35",
     "@types/pug": "^2.0.3",
+    "axios": "^0.15.3",
     "koa": "^2.0.0-alpha.7",
     "pg": "^6.1.2",
     "pug": "^2.0.0-beta6",
