--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
 version: '2'
 
 services:
-    job-queue:
+    redis:
         image: redis
         ports: 
             - "6379:6379"
-        container_name: redis_job_queue
-    database:
+    postgre:
         image: postgres
         ports:
             - "5432:5432"
