Switch to Express because Koa was being painful
Despite some seriously cool concepts behind the Vader router and koa in general the ecosystem is still wonky compared to the bulletproofed Express and Hapi alternatives.

--- a/.env.template
+++ b/.env.template
@@ -20,9 +20,22 @@ PORT=5000
 # This is used throughout the application to set redirects, email addresses and other such information.
 ACTIVE_RUNTIME_URL=http://localhost:5000
 
+# The URL of the PostgreSQL Database that should be used as the primary store.
+# This environmental variable is less descriptive than it could be but must be this way to allow deployment to Heroku
+# The default value set in this file is the local development value that will connect to docker
+DATABASE_URL=postgresql://postgres@localhost:5432/postgres
+
 ######################
 # CLIENT APPLICATION #
 ######################
+
+###################################
+# CRYPTOGRAPHY AND SECURE SECRETS #
+###################################
+
+# The secret string used to seed the SHA256 digest that will secure authentication tokens.
+# This must be strongly secure to prevent attackers from fraudulently issuing themselves tokens.
+AUTHENTICATION_TOKEN_SECRET=CHANGE_ME!
 
 ###########################
 # RENDERING AND TEMPLATES #
