--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "typings": "^2.0.0"
   },
   "dependencies": {
-    "@t2ee/vader": "^0.1.2",
-    "@types/koa": "^2.0.35",
+    "@types/bluebird": "^3.0.36",
+    "@types/jsonwebtoken": "^7.1.33",
     "@types/pug": "^2.0.3",
     "axios": "^0.15.3",
-    "koa": "^2.0.0-alpha.7",
+    "bluebird": "^3.4.7",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "graphql": "^0.7.0",
+    "graphql-server-express": "^0.4.3",
+    "graphql-subscriptions": "^0.2.2",
+    "graphql-tools": "^0.8.4",
+    "jsonwebtoken": "^7.2.1",
     "pg": "^6.1.2",
     "pug": "^2.0.0-beta6",
-    "reflect-metadata": "^0.1.8",
-    "ts-router": "^0.2.6",
-    "typeorm": "0.0.5",
     "underscore": "^1.8.3"
   }
 }
