Implement creating a new User on first registration

--- a/.env.template
+++ b/.env.template
@@ -25,6 +25,10 @@ ACTIVE_RUNTIME_URL=http://localhost:5000
 # The default value set in this file is the local development value that will connect to docker
 DATABASE_URL=postgresql://postgres@localhost:5432/postgres
 
+# Sets whether to use SSL encryption on the connection to Postgres
+# The default value is false so as to support development but it should be set to true in production
+DATABASE_SSL=false
+
 ######################
 # CLIENT APPLICATION #
 ######################
