--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "axios": "^0.15.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "graphql": "^0.7.0",
     "graphql-server-express": "^0.4.3",
     "graphql-subscriptions": "^0.2.2",
     "graphql-tools": "^0.8.4",
     "jsonwebtoken": "^7.2.1",
+    "knex": "^0.12.6",
     "pg": "^6.1.2",
     "pug": "^2.0.0-beta6",
     "underscore": "^1.8.3"
