--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.15.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
+    "dataloader": "^1.2.0",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "graphql": "^0.7.0",
