--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "**/.git": true,
         "**/.DS_Store": true,
         "**/*.js": { "when": "$(basename).ts"},
+        "**/*?.js": { "when": "$(basename).tsx"},
         "**/*.js.map": true
     }
 }
