--- a/package.json
+++ b/package.json
@@ -6,19 +6,30 @@
   "scripts": {
     "typescript-build": "tsc -p . ",
     "typescript-watch": "tsc -p . -w",
-    "cluster-bomb": "concurrently \"npm run typescript-watch\""
+    "react": "webpack",
+    "react-watch": "webpack -w",
+    "cluster-bomb": "concurrently \"npm run typescript-watch\" \"npm run react-watch\""
   },
   "license": "CC-BY-ND-4.0",
   "devDependencies": {
+    "awesome-typescript-loader": "^3.0.0-beta.17",
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "babel-preset-react": "^6.16.0",
     "concurrently": "^3.1.0",
+    "http-server": "^0.9.0",
     "mocha": "^3.2.0",
+    "source-map-loader": "^0.1.5",
     "typescript": "^2.1.4",
-    "typings": "^2.0.0"
+    "typings": "^2.0.0",
+    "webpack": "^1.14.0"
   },
   "dependencies": {
     "@types/bluebird": "^3.0.36",
     "@types/jsonwebtoken": "^7.1.33",
     "@types/pug": "^2.0.3",
+    "@types/react": "^0.14.55",
+    "@types/react-router": "^2.0.41",
+    "apollo-client": "^0.5.25",
     "axios": "^0.15.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
@@ -28,11 +39,17 @@
     "graphql": "^0.7.0",
     "graphql-server-express": "^0.4.3",
     "graphql-subscriptions": "^0.2.2",
+    "graphql-tag": "^1.1.2",
     "graphql-tools": "^0.8.4",
+    "history": "^4.5.0",
     "jsonwebtoken": "^7.2.1",
     "knex": "^0.12.6",
     "pg": "^6.1.2",
     "pug": "^2.0.0-beta6",
+    "react": "^15.4.1",
+    "react-apollo": "^0.7.2",
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
     "underscore": "^1.8.3"
   }
 }
