--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "typescript-watch": "tsc -p . -w",
     "react": "webpack",
     "react-watch": "webpack -w",
-    "cluster-bomb": "concurrently \"npm run typescript-watch\" \"npm run react-watch\""
+    "scss": "gulp build-styles",
+    "scss-watch": "gulp styles",
+    "images-copy": "gulp copy-images",
+    "images-watch": "gulp images",
+    "cluster-bomb": "concurrently \"npm run typescript-watch\" \"npm run react-watch\" \"npm run scss-watch\" \"npm run images-watch\""
   },
   "license": "CC-BY-ND-4.0",
   "devDependencies": {
@@ -16,6 +20,12 @@
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.16.0",
     "concurrently": "^3.1.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-sass": "^3.0.0",
+    "gulp-shorthand": "^1.1.0",
+    "gulp-sourcemaps": "^1.9.1",
     "http-server": "^0.9.0",
     "mocha": "^3.2.0",
     "source-map-loader": "^0.1.5",
@@ -26,7 +36,9 @@
   "dependencies": {
     "@types/bluebird": "^3.0.36",
     "@types/jsonwebtoken": "^7.1.33",
+    "@types/lscache": "^1.0.29",
     "@types/pug": "^2.0.3",
+    "@types/query-string": "^3.0.31",
     "@types/react": "^0.14.55",
     "@types/react-router": "^2.0.41",
     "apollo-client": "^0.5.25",
@@ -44,8 +56,10 @@
     "history": "^4.5.0",
     "jsonwebtoken": "^7.2.1",
     "knex": "^0.12.6",
+    "lscache": "^1.0.7",
     "pg": "^6.1.2",
     "pug": "^2.0.0-beta6",
+    "query-string": "^4.2.3",
     "react": "^15.4.1",
     "react-apollo": "^0.7.2",
     "react-dom": "^15.4.1",
