--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-motion": "^0.4.7",
     "react-onclickoutside": "^5.8.3",
     "react-router": "^3.0.0",
+    "react-select": "^1.0.0-rc.2",
     "underscore": "^1.8.3"
   }
 }
